# accomplishments-tool

./: .gitignore  LICENSE  Makefile  accomplishments_sample.bib  pyproject.toml  readme.md
pais-accomplishments-tool/: config.default.yml  paisAccTool.py
pais_accomplishments_tool/: __init__.py  config.default.yml  main.py  paisAccTool.py
pais_accomplishments_tool/decorators/: __init__.py  combine_accomplishments.py  formated_accomplishments.py  grouped_accomplishments.py  morphed_accomplishments.py  save.py  sorted_accomplishments.py
pais_accomplishments_tool/model/: __init__.py  configuration.py  entry.py  field.py  group.py  library.py
pais_accomplishments_tool/model/types/: __init__.py
tests/model/: library.py
tests/sample_data/: accomplishments_sample.bib  accomplishments_sample_broken.bib
